--- a/180314/180314/180314.vcxproj.filters
+++ b/180314/180314/180314.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="180404~180411.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="180412~.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
