--- a/180314/180314/180314.vcxproj.filters
+++ b/180314/180314/180314.vcxproj.filters
@@ -24,7 +24,10 @@
     <ClCompile Include="180404~180411.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="180412~.c">
+    <ClCompile Include="180412~180427.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="180430~.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
